--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav>
         <a href="#">Home</a>
-        <a href="#">Cars</a>
+        <a href="#">Motor Vehicles</a>
         <a href="#">Services</a>
         <a href="#">Contact</a>
     </nav>
